objects/User_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Picklist__c</fullName>
        <label>New Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test1</fullName>
                </value>
                <value>
                    <fullName>Test2</fullName>
                </value>
                <value>
                    <fullName>Test3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Details</relationshipLabel>
        <relationshipName>User_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Detail</label>
    <nameField>
        <label>Copado test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>